# titanic-eda

./: .gitignore  README.md  pyproject.toml  titanic_eda.ipynb
data/: analysis_summary.csv
