[project]
name = "titanic-eda"
version = "0.1.0"
description = "Exploratory Data Analysis of Titanic Dataset"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "openpyxl>=3.1.0",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.25.0",
]